fix: Optimize UI of agent list when its columns are overflow

--- a/web/src/components/Anchor/index.scss
+++ b/web/src/components/Anchor/index.scss
@@ -34,5 +34,5 @@
 }
 .fixed-top {
   position: fixed;
-  z-index: 1000; 
+  z-index: 10; 
 }
